--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.7",
+    "ethers": "^5.6.8",
     "hardhat": "^2.9.6"
   },
   "dependencies": {
+    "@looksrare/sdk": "^0.7.0",
+    "@metamask/eth-sig-util": "^4.0.1",
     "@openzeppelin/contracts": "^4.6.0"
   }
 }
